--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -46979,7 +46979,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   color: #ddd !important;
   text-decoration: none !important;
 }
-._1xkr92p {
+.tab {
   overflow-y: auto !important;
   padding-left: 12px !important;
   padding-right: 12px !important;
@@ -46988,7 +46988,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   scrollbar-width: none !important;
   -ms-overflow-style: none !important;
 }
-._1xkr92p::-webkit-scrollbar {
+.tab::-webkit-scrollbar {
   display: none !important;
 }
 ._qc3ank {
@@ -62139,14 +62139,14 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 ._1pzwj39 {
   color: #222 !important;
 }
-._1xkr92p {
+.tab {
   overflow-y: auto !important;
   padding-left: 12px !important;
   padding-right: 12px !important;
   margin-left: -12px !important;
   margin-right: -12px !important;
 }
-._1wadwfl {
+.tab__hr {
   height: 1px !important;
   background-color: #ddd !important;
 }
