--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -64577,7 +64577,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   padding: 24px !important;
 }
 /*! online-experience.css */
-._qzp5rw5 {
+.icon-card {
   -webkit-box-pack: justify !important;
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
@@ -64591,7 +64591,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   overflow-wrap: anywhere !important;
   min-height: 0 !important;
 }
-._z1k5n76 {
+.icon-card__title {
   font-size: 18px !important;
   line-height: 24px !important;
   overflow-wrap: anywhere !important;
@@ -64658,7 +64658,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   }
 }
 @media (min-width: 744px) {
-  ._qzp5rw5 {
+  .icon-card {
     border-radius: 8px !important;
   }
   ._cg8a3u {
