--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -40198,7 +40198,7 @@ video::cue {
     margin: 40px 40px 20px !important;
   }
 }
-._1b1whhx {
+.lightbox__counter {
   -webkit-box-pack: center !important;
   -webkit-box-align: center !important;
   color: #fff !important;
