photos__btn-wrapper

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -41051,10 +41051,10 @@ video::cue {
   outline: 0 !important;
   text-align: left !important;
 }
-.dir-ltr.s1hnrp4x[class][class] {
+.dir-ltr.photos__btn-wrapper[class][class] {
   right: 16px;
 }
-.s1hnrp4x[class][class] {
+.photos__btn-wrapper[class][class] {
   bottom: 16px;
   position: absolute;
   z-index: 2;
