btn-light-small

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -40502,7 +40502,7 @@ video::cue {
   top: 0 !important;
   position: absolute !important;
 }
-._1ju7xj0j {
+.btn-light-small {
   cursor: pointer !important;
   display: inline-block;
   margin: 0 !important;
