login-pane__header

--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -23670,7 +23670,7 @@ tr.hide {
   margin-left: 16px !important;
   margin-right: 16px !important;
 }
-._je2ned {
+.login-pane__header {
   margin-top: 8px !important;
   margin-bottom: 24px !important;
 }
