--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -8470,14 +8470,14 @@
     line-height: 48px;
   }
 }
-._7h9abkc {
+.alert-animation {
   animation-duration: 0.5s !important;
   animation-iteration-count: 1 !important;
   animation-fill-mode: both !important;
   font-size: 0 !important;
   animation-name: keyframe_1sh8tyy !important;
 }
-._jfyyva {
+.alert-danger {
   display: inline-flex !important;
   contain: layout !important;
   border: 1px solid #ddd !important;
@@ -8529,7 +8529,7 @@
   .w1jgykh1[class][class] {
     color: var(--gray-900);
   }
-  ._7h9abkc {
+  .alert-animation {
     -webkit-box-pack: center !important;
     -ms-flex-pack: center !important;
     display: -webkit-box !important;
