--- a/assets/css/pages.css
+++ b/assets/css/pages.css
@@ -26043,17 +26043,17 @@ tr.hide {
   width: 100% !important;
   height: 100% !important;
 }
-.c1gmbq7c[class][class] {
+.card-horizontal[class][class] {
   display: flex;
   align-items: center;
 }
-.dir.c1gmbq7c[class][class] {
+.dir.card-horizontal[class][class] {
   padding: var(--spacer-4) 0;
 }
-.dir-ltr.idybhsv[class][class] {
+.dir-ltr.card-horizontal__img[class][class] {
   margin-right: var(--spacer-5);
 }
-.dir.idybhsv[class][class] {
+.dir.card-horizontal__img[class][class] {
   border-radius: var(--border-radius);
 }
 ._q9rg6 {
@@ -26782,7 +26782,7 @@ tr.hide {
     display: none !important;
   }
 }
-._151wof4v {
+.card-horizontal__title {
   white-space: pre-line !important;
   max-width: 100% !important;
   font-size: var(--tl-font-size, 32px) !important;
@@ -26796,34 +26796,34 @@ tr.hide {
   -webkit-box-orient: vertical !important;
   text-overflow: ellipsis !important;
 }
-.dir.cffznj7[class][class] {
+.dir.horizontal-hero-card__wrapper[class][class] {
   border: 1px solid var(--gray-300);
   border-radius: var(--border-radius-lg);
 }
 @media (min-width: 744px) {
-  .cffznj7[class][class] {
+  .horizontal-hero-card__wrapper[class][class] {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
 }
 @media (min-width: 1128px) {
-  .cffznj7[class][class] {
+  .horizontal-hero-card__wrapper[class][class] {
     grid-template-columns: repeat(3, minmax(0, 1fr));
   }
 }
-.cffznj7[class][class] {
+.horizontal-hero-card__wrapper[class][class] {
   display: grid;
   grid-column-gap: 16px;
   overflow: hidden;
 }
-.dir.c14nl487[class][class] {
+.dir.horizontal-hero-card__body[class][class] {
   padding: var(--spacer-6);
 }
 @media (min-width: 744px) {
-  .dir.c14nl487[class][class] {
+  .dir.horizontal-hero-card__body[class][class] {
     padding: var(--spacer-7);
   }
 }
-.c14nl487[class][class] {
+.horizontal-hero-card__body[class][class] {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -26831,16 +26831,16 @@ tr.hide {
   grid-column: span 1;
 }
 @media (min-width: 744px) {
-  .c14nl487[class][class] {
+  .horizontal-hero-card__body[class][class] {
     align-items: flex-start;
   }
 }
-.dir.i1porrk5[class][class] {
+.dir.horizontal-hero-card__icon[class][class] {
   margin-top: var(--spacer-6);
   margin-bottom: var(--spacer-6);
 }
 @media (min-width: 744px) {
-  .dir.i1porrk5[class][class] {
+  .dir.horizontal-hero-card__icon[class][class] {
     margin-top: var(--spacer-3);
   }
 }
@@ -26866,7 +26866,7 @@ tr.hide {
   margin-block-end: 0;
   padding-inline-start: 0;
 }
-.dir.t1ip2k9k[class][class] {
+.dir.horizontal-hero-card__title[class][class] {
   margin-bottom: var(--spacer-3);
   text-align: center;
 }
@@ -26877,11 +26877,11 @@ tr.hide {
   list-style: none;
 }
 @media (min-width: 744px) {
-  .dir-ltr.t1ip2k9k[class][class] {
+  .dir-ltr.horizontal-hero-card__title[class][class] {
     text-align: left;
   }
 }
-._wah8ne {
+.horizontal-hero-card__title-text {
   white-space: pre-line !important;
   max-width: 100% !important;
   font-size: var(--tl-font-size, 16px) !important;
@@ -26891,20 +26891,20 @@ tr.hide {
   color: var(--tl-color, #000) !important;
   -webkit-line-clamp: var(--tl-line-clamp) !important;
 }
-.dir.svigw52[class][class] {
+.dir.horizontal-hero-card__text[class][class] {
   margin-bottom: var(--spacer-3);
   text-align: center;
 }
 @media (min-width: 744px) {
-  .dir-ltr.svigw52[class][class] {
+  .dir-ltr.horizontal-hero-card__text[class][class] {
     text-align: left;
   }
 }
-.dir.b13to4jp[class][class] {
+.dir.horizontal-hero-card__btn-wrapper[class][class] {
   margin-top: var(--spacer-5);
 }
 @media (min-width: 744px) {
-  .b13to4jp[class][class] {
+  .horizontal-hero-card__btn-wrapper[class][class] {
     width: auto;
   }
 }
@@ -28645,7 +28645,7 @@ tr.hide {
   width: 30px;
   z-index: 1;
 }
-._miupcl {
+.img-grid {
   border-radius: 8px !important;
   overflow: hidden !important;
 }
@@ -40064,7 +40064,7 @@ video::cue {
     padding-right: 8px !important;
   }
 }
-._125gmrun {
+.img-grid__inner {
   display: grid !important;
   gap: 8px !important;
   grid-template-columns: 1fr !important;
@@ -40477,7 +40477,7 @@ video::cue {
   box-shadow: none !important;
   transform: scale(1) !important;
 }
-._evft92 {
+.card__title {
   color: #222 !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
     'Helvetica Neue', sans-serif !important;
@@ -40486,7 +40486,7 @@ video::cue {
   line-height: 20px !important;
   margin-top: 16px !important;
 }
-._4zdnhq {
+.card__text {
   color: #222 !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
     'Helvetica Neue', sans-serif !important;
@@ -40602,11 +40602,11 @@ video::cue {
   max-height: calc(75vh - 144px) !important;
   min-height: 300px !important;
 }
-._m0r2ik {
+.small-card__inner {
   width: 100% !important;
   background-color: #f7f7f7 !important;
 }
-._2ggatd {
+.small-card {
   box-sizing: inherit !important;
   flex-basis: auto !important;
   min-width: 0 !important;
@@ -40615,14 +40615,14 @@ video::cue {
   width: 33.3333% !important;
 }
 @media (min-width: 744px) {
-  ._2ggatd {
+  .small-card {
     padding-left: 8px !important;
     padding-right: 8px !important;
     width: 25% !important;
   }
 }
 @media (min-width: 1128px) {
-  ._2ggatd {
+  .small-card {
     width: 16.6667% !important;
   }
 }
@@ -40656,7 +40656,7 @@ video::cue {
   }
 }
 @media (min-width: 744px) {
-  ._flw4b7 {
+  .small-card__text {
     line-height: 20px !important;
     overflow: hidden !important;
     text-overflow: ellipsis !important;
@@ -40672,12 +40672,12 @@ video::cue {
 }
 @media (min-width: 744px) {
   @supports (overflow: clip) {
-    ._flw4b7 {
+    .small-card__text {
       overflow: clip !important;
     }
   }
 }
-._9103zv {
+.small-card__body {
   -webkit-box-pack: center !important;
   -webkit-box-align: center !important;
   display: flex !important;
@@ -40690,19 +40690,19 @@ video::cue {
   word-break: break-word !important;
 }
 @media (min-width: 744px) {
-  ._9103zv {
+  .small-card__body {
     height: 72px !important;
     padding-left: 12px !important;
     padding-right: 12px !important;
   }
 }
 @media (min-width: 1128px) {
-  ._9103zv {
+  .small-card__body {
     height: 72px !important;
   }
 }
 @media (min-width: 1440px) {
-  ._9103zv {
+  .small-card__body {
     height: 96px !important;
   }
 }
@@ -40714,7 +40714,7 @@ video::cue {
     margin-bottom: 44px !important;
   }
 }
-._flw4b7 {
+.small-card__text {
   line-height: 16px !important;
   overflow: hidden !important;
   text-overflow: ellipsis !important;
@@ -40728,7 +40728,7 @@ video::cue {
   font-size: 12px !important;
 }
 @supports (overflow: clip) {
-  _flw4b7 {
+  small-card__text {
     overflow: clip !important;
   }
 }
@@ -61061,7 +61061,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   margin-top: 16px !important;
   position: relative !important;
 }
-._15ut2yit {
+.horizontal-card-dark {
   cursor: pointer !important;
   display: inline-block !important;
   margin: 0 !important;
@@ -61107,23 +61107,23 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   justify-content: flex-start !important;
   pointer-events: none !important;
 }
-._1wiynur {
+.horizontal-card-dark__img {
   margin-left: 0 !important;
   margin-right: 16px !important;
 }
-._f9uxok {
+.horizontal-card-dark__title {
   color: #fff !important;
   font-size: 14px !important;
   line-height: 18px !important;
 }
-._1cecj8q {
+.horizontal-card-dark__text {
   margin-top: 4px !important;
   font-size: 12px !important;
   line-height: 16px !important;
   color: #fff !important;
   font-weight: 400 !important;
 }
-._tx7p69r {
+.card-dark {
   cursor: pointer !important;
   display: inline-block !important;
   margin: 0 !important;
@@ -61142,7 +61142,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   outline: 0 !important;
   width: 100% !important;
 }
-._1cfbqt9 {
+.card-dark__body {
   -webkit-box-direction: normal !important;
   -webkit-box-orient: vertical !important;
   padding: 16px !important;
@@ -61151,7 +61151,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   border-bottom-left-radius: 12px !important;
   border-bottom-right-radius: 12px !important;
 }
-._x4r3u7 {
+.card-dark__title {
   color: #fff !important;
   font-size: 14px !important;
   line-height: 20px !important;
@@ -61163,11 +61163,11 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   -webkit-box-orient: vertical !important;
 }
 @supports (overflow: clip) {
-  ._x4r3u7 {
+  .card-dark__title {
     overflow: clip !important;
   }
 }
-._wfgfvf {
+.card-dark__subtitle {
   margin-top: 4px !important;
   color: #fff !important;
   font-size: 12px !important;
@@ -63989,7 +63989,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 ._v08k6k {
   padding-top: 16px !important;
 }
-._kedp3u {
+.heading-md {
   font-size: 18px !important;
   line-height: 22px !important;
   font-weight: 600 !important;
@@ -66634,69 +66634,69 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
 .dir-ltr.s1f23tw1[class][class] {
   right: var(--s1f23tw1-6);
 }
-.b117oblx[class][class] {
+.btn-light-outlined-sm[class][class] {
   align-items: center;
   display: inline-flex;
   height: 100%;
   width: 100%;
   color: var(--gray-900);
 }
-.dir.b117oblx[class][class] {
+.dir.btn-light-outlined-sm[class][class] {
   background: 0 0;
   border: 2px solid transparent;
   padding: 0 14px;
   border-radius: 8px;
 }
-.b117oblx[class][class]:focus {
+.btn-light-outlined-sm[class][class]:focus {
   outline: 0;
 }
-.b117oblx[class][class]:focus-visible {
+.btn-light-outlined-sm[class][class]:focus-visible {
   outline: 0;
 }
-.dir.b117oblx[class][class]:focus-visible {
+.dir.btn-light-outlined-sm[class][class]:focus-visible {
   transition: box-shadow 0.2s;
   box-shadow: 0 0 0 2px var(--white), 0 0 0 4px var(--gray-900);
   background-color: var(---pc-g-v-g);
   border: 2px solid var(--gray-900);
 }
-.dir.b117oblx[class][class]:focus-visible::-moz-focus-inner {
+.dir.btn-light-outlined-sm[class][class]:focus-visible::-moz-focus-inner {
   border: none;
   padding: 0;
   margin: 0;
 }
-.dir.b117oblx[class][class]:focus-visible:focus::-moz-focus-inner {
+.dir.btn-light-outlined-sm[class][class]:focus-visible:focus::-moz-focus-inner {
   border: none;
 }
-.b117oblx[class][class]:focus-visible:-moz-focusring {
+.btn-light-outlined-sm[class][class]:focus-visible:-moz-focusring {
   outline: 0;
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.b117oblx[class][class]:focus-visible {
+  .dir.btn-light-outlined-sm[class][class]:focus-visible {
     transition: none;
   }
 }
-.b117oblx[class][class]:focus[data-focus-visible-added] {
+.btn-light-outlined-sm[class][class]:focus[data-focus-visible-added] {
   outline: 0;
 }
-.dir.b117oblx[class][class]:focus[data-focus-visible-added] {
+.dir.btn-light-outlined-sm[class][class]:focus[data-focus-visible-added] {
   transition: box-shadow 0.2s;
   box-shadow: 0 0 0 2px var(--white), 0 0 0 4px var(--gray-900);
   background-color: var(---pc-g-v-g);
   border: 2px solid var(--gray-900);
 }
-.dir.b117oblx[class][class]:focus[data-focus-visible-added]::-moz-focus-inner {
+.dir.btn-light-outlined-sm[class][class]:focus[data-focus-visible-added]::-moz-focus-inner {
   border: none;
   padding: 0;
   margin: 0;
 }
-.dir.b117oblx[class][class]:focus[data-focus-visible-added]:focus::-moz-focus-inner {
+.dir.btn-light-outlined-sm[class][class]:focus[data-focus-visible-added]:focus::-moz-focus-inner {
   border: none;
 }
-.b117oblx[class][class]:focus[data-focus-visible-added]:-moz-focusring {
+.btn-light-outlined-sm[class][class]:focus[data-focus-visible-added]:-moz-focusring {
   outline: 0;
 }
 @media (prefers-reduced-motion: reduce) {
-  .dir.b117oblx[class][class]:focus[data-focus-visible-added] {
+  .dir.btn-light-outlined-sm[class][class]:focus[data-focus-visible-added] {
     transition: none;
   }
 }
@@ -68752,7 +68752,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     line-height: 2.25rem !important;
   }
 }
-._1dhyp9b {
+.card__lite-image-title {
   color: #222 !important;
   font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
     Helvetica Neue, sans-serif !important;
@@ -68762,7 +68762,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
   margin-top: 0.75rem !important;
 }
 @media (min-width: 744px) {
-  ._1dhyp9b {
+  .card__lite-image-title {
     color: #222 !important;
     font-family: Circular, -apple-system, BlinkMacSystemFont, Roboto,
       Helvetica Neue, sans-serif !important;
@@ -68827,7 +68827,7 @@ button[data-testid='cypress-headernav-profile']:focus + .c3i7glo[class][class] {
     margin-right: calc(-1 * var(--ic-zlb-s));
   }
 }
-._bfbtmj {
+.grid {
   display: grid !important;
 }
 .gkbbbvk[class][class] {
